tests/org.eclipse.n4js.spec.examples.xpect.tests/xt-tests/spec_chap_05_02_07_05__Optional_Fields/Example_Problem2OfOptionalFields.n4js.xt
/*
 * Copyright (c) 2016 NumberFour AG.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   NumberFour AG - Initial API and implementation
 */

/* XPECT_SETUP org.eclipse.n4js.spec.examples.xpect.tests.SpecXtTest END_SETUP */


class C {
	public field?: string;
}

class D {}

let c: ~C;

// XPECT errors --> "D is not a structural subtype of ~C: missing setter or field field." at "new D()"
c = new D(); // error: new expression but D is missing setter

c.field = "hello";
